tests/resources/errors/errors18.ac
import std;
import std.Error;

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

fn write_val(val: int) {

#if OS_GROUP_WINDOWS
    handle: void* = std.GetStdHandle(-11);
    written: uint32;
    c: char = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    c: char = as(char) val;
    std.write(1, &c, 1);
#endif

}

fn foo(cond: bool) -> int | raises TestError {
    if cond {
        return 64;
    }

    raise TestError{};
}

fn main() {
    f: fn(bool) -> int | raises TestError = foo;
    value: int = try f(true);
    write_val(value);
    try f(false);
}